--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -306,8 +306,8 @@ ul {
 
 @media only screen and (max-width: 600px) {
 
-    * {
-        margin: 0px 1% 0% 1%;
+    .main-content {
+        margin: 0;
     }
 
     h1,
@@ -335,8 +335,8 @@ ul {
 
     [class*="circle"] {
         position: absolute;
-        top: 10%;
-        left: 33%;
+        top: 0%;
+        left: 25%;
         transform: translate(-50%, -50%);
         width: 200px;
         background: rgb(0, 0, 0, 0);
@@ -346,7 +346,7 @@ ul {
 
     .circle3 {
         position: absolute;
-        top: 10%;
+        top: 0%;
         left: 66%;
         transform: translate(-50%, -50%);
         width: 200px;
@@ -363,6 +363,7 @@ ul {
         display: flex;
         flex-direction: column;
         margin-bottom: 5%;
+        border: solid 1px #008170;
 
     }
 
@@ -378,5 +379,9 @@ ul {
 
     .card-skills {
         margin-top: 20px;
+    }
+
+    .profile-section {
+        margin-top: 15%;
     }
 }
